# voice

./: .gitignore  CLAUDE.md  README.md  internal_api_instructions.md  main.py  pyproject.toml
.claude/: settings.json
.github/: template-state.json
.serena/: project.yml
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
agents/: appointment_followup.py  base.py  custom_intake.py  insurance_verification.py  intake.py  lab_results.py  prescription_refill.py  router.py  triage.py
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/app/: main.py
api/app/core/: config.py  database.py
api/app/models/: __init__.py  generated.py
app/: main.py  settings.py
